@@ -13,10 +13,15 @@ add_executable(mosquitto_pub pub_client.c pub_shared.c ${shared_src})
 add_executable(mosquitto_sub sub_client.c sub_client_output.c ${shared_src})
 add_executable(mosquitto_rr rr_client.c pub_shared.c sub_client_output.c ${shared_src})
 
-
-target_link_libraries(mosquitto_pub libmosquitto)
-target_link_libraries(mosquitto_sub libmosquitto)
-target_link_libraries(mosquitto_rr libmosquitto)
+if (WITH_STATIC_LIBRARIES)
+	target_link_libraries(mosquitto_pub libmosquitto_static)
+	target_link_libraries(mosquitto_sub libmosquitto_static)
+	target_link_libraries(mosquitto_rr libmosquitto_static)
+else()
+	target_link_libraries(mosquitto_pub libmosquitto)
+	target_link_libraries(mosquitto_sub libmosquitto)
+	target_link_libraries(mosquitto_rr libmosquitto)
+endif()
 
 if (QNX)
     target_link_libraries(mosquitto_pub socket)
